...
                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fondoLogin" translatesAutoresizingMaskIntoConstraints="NO" id="UMs-mn-mcQ">
                                <rect key="frame" x="0.0" y="0.0" width="430" height="898"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please sign in to continue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sb4-PF-Hwz">
                                <rect key="frame" x="16" y="187" width="398" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="XqC-JV-byW">
                                        <variation key="heightClass=regular-widthClass=compact" constant="30"/>
                                        <variation key="heightClass=regular-widthClass=regular" constant="30"/>
                                    </constraint>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                </variation>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fmO-aJ-kfF">
                                <rect key="frame" x="16" y="299" width="398" height="54"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="54" id="hi1-s0-2Tc">
                                        <variation key="heightClass=regular-widthClass=regular" constant="75"/>
                                    </constraint>
                                </constraints>
...
                                <buttonConfiguration key="configuration" style="plain">
                                    <backgroundConfiguration key="background" cornerRadius="20">
                                        <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                        <color key="strokeColor" systemColor="labelColor"/>
                                    </backgroundConfiguration>
                                    <attributedString key="attributedTitle">
                                        <fragment content="Log In">
                                            <attributes>
                                                <font key="NSFont" metaFont="system" size="20"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
                                    <color key="baseForegroundColor" systemColor="labelColor"/>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wHi-Fv-CYe">
                                        <rect key="frame" x="281.66666666666669" y="0.0" width="116.33333333333331" height="38"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Sign Up">
                                            <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="goToSignInButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="EW5-N6-wrV"/>
                                        </connections>
                                    </button>
...
                                    <constraint firstAttribute="height" constant="38" id="rsT-NN-hpG">
                                        <variation key="heightClass=regular-widthClass=compact" constant="38"/>
                                    </constraint>
                                </constraints>
                                <variation key="heightClass=regular-widthClass=regular" distribution="fillEqually"/>
                            </stackView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DIS-RV-UIC">
                                <rect key="frame" x="16" y="233" width="398" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="lJ5-H8-zrL">
                                        <variation key="heightClass=regular-widthClass=compact" constant="50"/>
                                        <variation key="heightClass=regular-widthClass=regular" constant="75"/>
                                    </constraint>
...
