...
    private let db = Firestore.firestore()

    // MARK: LOGIN FUNCTIONS
    func loginWithEmailAndPassword(email: String, password: String, sender: UIViewController, destination: UIViewController) {
        Auth.auth().signIn(withEmail: email, password: password) { (result, error) in
            if let _error = error {
                UsefulFunctions.showAlert(title: "Something went wrong", message: _error.localizedDescription, viewController: sender)
            } else {
                self.goToHomeScreen(sender: sender)
            }
        }
    }

...
