...
                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle2"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="saveMovement:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="hMC-dm-YyN"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name (max 15 characters)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fBg-83-mD9">
                                <rect key="frame" x="16" y="146" width="798" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Ypj-hL-jam">
                                        <variation key="heightClass=regular-widthClass=regular" constant="45"/>
                                    </constraint>
                                </constraints>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="jnn-T3-8gN">
                                        <variation key="heightClass=regular-widthClass=regular" constant="50"/>
                                    </constraint>
                                </constraints>
                            </stackView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yyf-or-EzH">
                                <rect key="frame" x="16" y="207" width="802" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="Xib-uy-7Ie">
                                        <variation key="heightClass=regular-widthClass=regular" constant="45"/>
                                    </constraint>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="lkK-u1-KRp"/>
...
