...
              let email = emailTextField.text, let password = passwordTextField.text,
              let confirmPassword = confirmPasswordTextField.text else {
            return false
        }
        
        if name.isEmpty || surname.isEmpty || email.isEmpty || password.isEmpty || confirmPassword.isEmpty {
            showAlert(title: "Oh no!", message: "You've left an empty field")
            return false
        }
        
        if password != confirmPassword {
            showAlert(title: "Oh no!", message: "Passwords do not match")
            return false
...
